--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# hello.springmvc ???? ? ?? ?? ?? ??
+# log? ???? trace,debug,info,warn,error ??? ?? ???.
+# ?? ????? trace? debug?????? ? ? ?? ???? log? ???.
+# ?? ????? info????? ????? ??.
+# ?? ??? ???
+logging.level.root=info
+# ??? ???? log????? ???? ???.
+logging.level.hello.board=debug
