--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,21 @@
 # ?? ??? ???
 logging.level.root=info
 # ??? ???? log????? ???? ???.
-logging.level.hello.board=debug
+#logging.level.hello.board=debug
+
+server.port=9000
+
+# DB ?? (postgresql)
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5433/chany
+spring.datasource.hikari.username=chany
+spring.datasource.hikari.password=chany
+
+
+
+## mybatis ??
+#mybatis.config=mybatis/mybatis-config.xml
+#mybatis.type-aliases-package=hello.board
+#mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
