--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
-# hello.springmvc ???? ? ?? ?? ?? ??
-# log? ???? trace,debug,info,warn,error ??? ?? ???.
-# ?? ????? trace? debug?????? ? ? ?? ???? log? ???.
-# ?? ????? info????? ????? ??.
-# ?? ??? ???
-logging.level.root=info
-# ??? ???? log????? ???? ???.
-#logging.level.hello.board=debug
 
+#logging.level.root=info
 server.port=9000
 
-# DB ?? (postgresql)
+# DB connection information. (postgresql)
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5433/chany
@@ -17,9 +10,3 @@ spring.datasource.hikari.username=chany
 spring.datasource.hikari.password=chany
 
 
-
-## mybatis ??
-#mybatis.config=mybatis/mybatis-config.xml
-#mybatis.type-aliases-package=hello.board
-#mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
-#mybatis.configuration.map-underscore-to-camel-case=true
