--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,13 @@ server.port=9000
 # DB connection information. (postgresql)
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/java
-spring.datasource.hikari.username=y_chan
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5433/chany
+spring.datasource.hikari.username=chany
 spring.datasource.hikari.password=1234
 
 # mybatis camel-case ??.
 mybatis.configuration.map-underscore-to-camel-case=true
+
+
+# spring security
 
