--- a/src/main/resources/application-git.properties
+++ b/src/main/resources/application-git.properties
@@ -5,9 +5,9 @@ server.port=9000
 # DB connection information. (postgresql)
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5433/java
-spring.datasource.hikari.username=y_chan
-spring.datasource.hikari.password=1234
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://{your ip}
+spring.datasource.hikari.username={user id}
+spring.datasource.hikari.password={password}
 
 # mybatis camel-case ??.
 mybatis.configuration.map-underscore-to-camel-case=true
