--- a/src/main/resources/application-git.properties
+++ b/src/main/resources/application-git.properties
@@ -14,4 +14,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 
 # spring security
-
+# spring DB\uC5D0\uC11C \uAD00\uB9AC\uD568. \uD14C\uC2A4\uD2B8\uC6A9
