--- a/src/main/resources/application-git.properties
+++ b/src/main/resources/application-git.properties
@@ -1,17 +1,17 @@
-
-#logging.level.root=info
-server.port=9000
-
-# DB connection information. (postgresql)
-spring.datasource.hikari.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://{your ip}
-spring.datasource.hikari.username={user id}
-spring.datasource.hikari.password={password}
-
-# mybatis camel-case ??.
-mybatis.configuration.map-underscore-to-camel-case=true
-
-
-# spring security
-# spring DB\uC5D0\uC11C \uAD00\uB9AC\uD568. \uD14C\uC2A4\uD2B8\uC6A9
+#
+##logging.level.root=info
+#server.port=9000
+#
+## DB connection information. (postgresql)
+#spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+#spring.datasource.hikari.maximum-pool-size=4
+#spring.datasource.hikari.jdbc-url=jdbc:postgresql://{your ip}
+#spring.datasource.hikari.username={user id}
+#spring.datasource.hikari.password={password}
+#
+## mybatis camel-case ??.
+#mybatis.configuration.map-underscore-to-camel-case=true
+#
+#
+## spring security
+## spring DB\uC5D0\uC11C \uAD00\uB9AC\uD568. \uD14C\uC2A4\uD2B8\uC6A9
