--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,8 @@
-# http? ?? ??.
-#logging:
-#  level:
-#    org:
-#      apache:
-#        coyote:
-#          http11: DEBUG
+logging:
+  level:
+    org:
+      apache:
+        coyote:
+          http11: DEBUG
 
 
