servlet vs springmvc

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,8 @@ logging:
       apache:
         coyote:
           http11: DEBUG
-
-
+spring:
+  mvc:
+    view:
+      prefix: "/WEB-INF/views/"
+      suffix: ".jsp"
