--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,6 @@ server:
   port: 9000
 
 # http logging
-logging:
-  level:
-    org.apache.coyote.http11: debug
+#logging:
+#  level:
+#    org.apache.coyote.http11: debug
